# sso-live-coding

./: .gitignore  404.html  CHECKLIST.md  README.md  _redirects  copy-styles.sh  docker-compose.yaml  index.html
assets/: DrawingControls-09aa4cfc.js  DrawingControls-dc063ac9.js  DrawingLayer-1f0342d3.js  DrawingLayer-7b63fbb1.js  NoteDisplay-5af7db11.js  NoteDisplay-7cd37f40.js  NotesView-43994a67.js  NotesView-f9d28262.js  Presenter-02d382cd.js  Presenter-7a6a628b.js  PresenterPrint-19e8003e.js  PresenterPrint-f31e7c9d.js  index-4ea070bb.css  index-8f3f8dca.js  index-ab9c0722.js
java/: build.gradle.kts  pdf-export.sh  settings.gradle.kts
javascript/: index.js  package-lock.json  package.json  pdf-export.sh
javascript/views/: anonymous.handlebars  authenticated.handlebars
python/: app.py  pdf-export.sh  pyproject.toml
python/static/: style.css
python/templates/: anonymous.html  authenticated.html  conferences.html
reference-implementations/java/: build.gradle.kts  settings.gradle.kts
reference-implementations/javascript/: index.js  package-lock.json  package.json
reference-implementations/javascript/views/: anonymous.handlebars  authenticated.handlebars  conferences.handlebars
reference-implementations/python/: app.py  pyproject.toml
reference-implementations/python/templates/: anonymous.html  authenticated.html
resource-server/java/: build.gradle.kts  settings.gradle.kts
slides/: package-lock.json  package.json  slides-english.md  slides-french.md  slides.md  sso-live-coding.excalidraw  sso-v3.excalidraw
slides/styles/: style.css
(+19 files in other folders)
