[tool.poetry]
name = "sso-demo"
version = "0.1.0"
description = ""
authors = ["Daniel Garnier-Moiroux <git@garnier.wf>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
